[gd_scene load_steps=3 format=3 uid="uid://cg1rc471stkkl"]

[ext_resource type="Theme" uid="uid://bk3h4jf31pof3" path="res://assets/nav_panel/nav_panel_border.tres" id="1_gxq1d"]
[ext_resource type="Script" path="res://ui/navigation_panel/navigation_panel.gd" id="1_tyrlj"]

[node name="NavigationPanel" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_tyrlj")

[node name="Panel" type="Panel" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -91.0
offset_top = -55.5
offset_right = 91.0
offset_bottom = 55.5
grow_horizontal = 2
grow_vertical = 2
theme = ExtResource("1_gxq1d")

[node name="Button" type="Button" parent="Panel"]
layout_mode = 0
offset_left = 30.0
offset_top = 19.5
offset_right = 74.0
offset_bottom = 50.5
text = "loc 1"

[node name="Button2" type="Button" parent="Panel"]
layout_mode = 0
offset_left = 89.0
offset_top = 19.5
offset_right = 133.0
offset_bottom = 50.5
text = "loc 2
"

[node name="Button3" type="Button" parent="Panel"]
layout_mode = 0
offset_left = 32.0
offset_top = 60.5
offset_right = 76.0
offset_bottom = 91.5
text = "loc 3"

[node name="Exit" type="Button" parent="Panel"]
layout_mode = 0
offset_left = 119.0
offset_top = 64.5
offset_right = 163.0
offset_bottom = 95.5
text = "Exit"

[connection signal="pressed" from="Panel/Button" to="." method="button1_pressed"]
[connection signal="pressed" from="Panel/Button2" to="." method="button2_pressed"]
[connection signal="pressed" from="Panel/Button3" to="." method="button3_pressed"]
