extends Control


# Called when the node enters the scene tree for the first time.
func _ready():
	pass # Replace with function body.


# Called every frame. 'delta' is the elapsed time since the previous frame.
func _process(delta):
	pass


# CHANGE SCENCES HERE

func button1_pressed():
	pass # Replace with function body.

func button2_pressed():
	pass # Replace with function body.

func button3_pressed():
	pass # Replace with function body.
